config zaper logger
